--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,9 +9,12 @@ h1{
     font-weight: bold;
     color: #16a085;
     text-align: center;
+    padding: 40px;
 }
 h2{
     font-size: 25px;
+    text-align: center;
+    padding: 50px;
 }
 p, li{
     font-size: 18px;
@@ -20,14 +23,20 @@ p, li{
     background-color: white; 
     padding: 20px;
 }
-footer, .menunavbar{
-    background-color: #16a085; 
-    padding: 20px;
+.footerBar{
+    background-color: #16A085; 
     color: white;
-    
+}
+.menunavbar{
+    background-color: #16a085; 
+    color: white;
+}
+.navbar-collapse{
+    padding: 0px;
 }
 .menunavbar a{
      color: white;
+     font-weight: bold;
 }
 .menunavbar li a:hover{
      background-color: #1acca8;
@@ -37,8 +46,47 @@ footer, .menunavbar{
     margin-bottom: 10px;
 }
 footer{
-    margin-bottom: 30px;
+    height: 60px;
 }
 .form{
     margin-top: 30px;
 }
+.justify{
+    text-align:justify;
+    margin:0 5%;
+}
+#center2{
+    text-align:center;
+    margin:5% 5%;
+}
+.linkYoutube{
+    display: none;
+}
+.copyright{
+    margin: 5% 0;
+    text-align: center;
+}
+.imgRenov{
+    text-align: center;
+    margin-bottom: 40px;
+}
+@media screen and (min-width: 200px) and (max-width: 600px) {
+    .video{
+        display: none;
+    }
+    .linkYoutube{
+    display: block;
+    }
+}
+@media screen and (min-width: 200px) and (max-width: 710px) {
+    .map{
+        display: none;
+    }
+}
+@media screen and (min-width: 710px) and (max-width: 992px) {
+    .map{
+        width: 100%;
+        justify-content: center;
+        padding-bottom: 20px;
+    }
+}   
