--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -42,11 +42,34 @@ footer{
 .form{
     margin-top: 30px;
 }
-.justify2{
+.justify{
     text-align:justify;
     margin:0 5%;
 }
 #center2{
     text-align:center;
-    margin:0 5%;
+    margin:5% 5%;
+}
+.linkYoutube{
+    display: none;
+}
+@media screen and (min-width: 200px) and (max-width: 600px) {
+    .video{
+        display: none;
+    }
+    .linkYoutube{
+    display: block;
+    }
+}
+@media screen and (min-width: 200px) and (max-width: 710px) {
+    .map{
+        display: none;
+    }
+}
+@media screen and (min-width: 710px) and (max-width: 992px) {
+    .map{
+        width: 100%;
+        justify-content: center;
+        padding-bottom: 20px;
+    }
 }
