--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,30 @@ p, li{
 .menunavbar li a:hover{
      background-color: #1acca8;
 }
+.navbar, .navbar-inverse {
+    background-color: #16a085;
+	border-radius: 0;
+	border: none;
+	margin-bottom: 0;
+	min-height: 80px;
+}
+.nav li {
+	display: inline;
+	color: white;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+	color: #ffffff;
+	font-family: 'Didact Gothic';
+	font-size: 1.2em;
+	font-weight: 300;
+	padding: 30px 25px 33px 25px;
+}
+.navbar-inverse .navbar-nav li a:hover {
+	background-color: #1acca8;
+	transition: 0.7s all linear;
+	height: 100%;
+}
 .logo{
     margin-top: 10px;
     margin-bottom: 10px;
