--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,9 +23,37 @@ p, li{
     background-color: white; 
     padding: 20px;
 }
-.footerBar{
+.footerOcordo{
     background-color: #16A085; 
     color: white;
+    height: 100px;
+    display: inline-block;
+    width: 100%;  
+    height: 200px;
+    margin-bottom: 50px;
+}
+.footerOcordo ul{
+    position: absolute; /* postulat de départ */
+}
+.authorOcordo{
+    text-align: center;
+    font-size: 20px;
+}
+.authorOcordo a{
+    text-decoration: none;
+    color: white;  
+    display: inline-block;
+    margin-left: auto;
+
+    margin-right: auto;
+}
+.authorOcordo a:hover {
+    background-color: #1acca8;
+    transition: 0.7s all linear;
+    height: 100%;
+}
+.authorOcordo li{ 
+    display: inline-block;
 }
 .menunavbar{
     background-color: #16a085; 
@@ -35,35 +63,35 @@ p, li{
     padding: 0px;
 }
 .menunavbar a{
-     color: white;
-     font-weight: bold;
+    color: white;
+    font-weight: bold;
 }
 .menunavbar li a:hover{
-     background-color: #1acca8;
+    background-color: #1acca8;
 }
 .navbar, .navbar-inverse {
     background-color: #16a085;
-	border-radius: 0;
-	border: none;
-	margin-bottom: 0;
-	min-height: 80px;
+    border-radius: 0;
+    border: none;
+    margin-bottom: 0;
+    min-height: 80px;
 }
 .nav li {
-	display: inline;
-	color: white;
+    display: inline;
+    color: white;
 }
 
 .navbar-inverse .navbar-nav > li > a {
-	color: #ffffff;
-	font-family: 'Didact Gothic';
-	font-size: 1.2em;
-	font-weight: 300;
-	padding: 30px 25px 33px 25px;
+    color: #ffffff;
+    font-family: 'Didact Gothic';
+    font-size: 1.2em;
+    font-weight: 300;
+    padding: 30px 25px 33px 25px;
 }
 .navbar-inverse .navbar-nav li a:hover {
-	background-color: #1acca8;
-	transition: 0.7s all linear;
-	height: 100%;
+    background-color: #1acca8;
+    transition: 0.7s all linear;
+    height: 100%;
 }
 .logo{
     margin-top: 10px;
@@ -113,4 +141,4 @@ footer{
         justify-content: center;
         padding-bottom: 20px;
     }
-}   
+}
