--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,73 +1,6 @@
-body{
-    font-family: 'Didact Gothic', sans-serif;
-    background-image: url("../img/pattern-23.png");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
-h1{
-    font-size: 30px;
-    font-weight: bold;
-    color: #16a085;
-    text-align: center;
-    padding: 40px;
-}
-h2{
-    font-size: 25px;
-    text-align: center;
-    padding: 50px;
-}
-p, li{
-    font-size: 18px;
-}
-.background{
-    background-color: white; 
-    padding: 20px;
-}
-.footerOcordo{
-    background-color: #16A085; 
-    color: white;
-    height: 100px;
-    display: inline-block;
-    width: 100%;  
-    height: 200px;
-    margin-bottom: 50px;
-}
-.footerOcordo ul{
-    position: absolute; /* postulat de départ */
-}
-.authorOcordo{
-    text-align: center;
-    font-size: 20px;
-}
-.authorOcordo a{
-    text-decoration: none;
-    color: white;  
-    display: inline-block;
-    margin-left: auto;
-
-    margin-right: auto;
-}
-.authorOcordo a:hover {
-    background-color: #1acca8;
-    transition: 0.7s all linear;
-    height: 100%;
-}
-.authorOcordo li{ 
-    display: inline-block;
-}
-.menunavbar{
-    background-color: #16a085; 
-    color: white;
-}
+    /*------ HEADER/NAVBAR ------*/
 .navbar-collapse{
     padding: 0px;
-}
-.menunavbar a{
-    color: white;
-    font-weight: bold;
-}
-.menunavbar li a:hover{
-    background-color: #1acca8;
 }
 .navbar, .navbar-inverse {
     background-color: #16a085;
@@ -80,7 +13,6 @@ p, li{
     display: inline;
     color: white;
 }
-
 .navbar-inverse .navbar-nav > li > a {
     color: #ffffff;
     font-family: 'Didact Gothic';
@@ -97,11 +29,34 @@ p, li{
     margin-top: 10px;
     margin-bottom: 10px;
 }
-footer{
-    height: 60px;
+
+    /*------ CONTENT ------*/
+        
+    /*------ général ------*/
+body{
+    font-family: 'Didact Gothic', sans-serif;
+    background-image: url("../img/pattern-23.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
-.form{
-    margin-top: 30px;
+.background{
+    background-color: white; 
+    padding: 20px;
+}
+h1{
+    font-size: 30px;
+    font-weight: bold;
+    color: #16a085;
+    text-align: center;
+    padding: 20px;
+}
+h2{
+    font-size: 25px;
+    text-align: center;
+    padding: 20px;
+}
+p, li{
+    font-size: 18px;
 }
 .justify{
     text-align:justify;
@@ -111,17 +66,61 @@ footer{
     text-align:center;
     margin:5% 5%;
 }
-.linkYoutube{
-    display: none;
-}
-.copyright{
-    margin: 5% 0;
-    text-align: center;
-}
+    /*------ accueil ------*/
 .imgRenov{
     text-align: center;
     margin-bottom: 40px;
 }
+    /*------ Qui sommes nous ------*/
+.linkYoutube{
+    display: none;
+}
+    /*------ contact ------*/
+.form{
+    margin-top: 30px;
+}
+
+    /*------ FOOTER ------*/
+        
+.footerOcordo{
+    background-color: #16A085; 
+    color: white;
+    display: inline-block;
+    width: 100%;  
+    height: 100%;
+    margin-bottom: 20px;
+}
+.footerOcordo ul{
+    position: absolute; /* postulat de départ */
+}
+.copyright{
+    font-size: 15px;
+    margin-top: 20px;
+    text-align: center;
+}
+.authorOcordo{
+    padding-top: 20px;
+    text-align: center;
+    font-size: 20px;
+}
+.authorOcordo a{
+    text-decoration: none;
+    color: white;  
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.authorOcordo a:hover {
+    background-color: #1acca8;
+    transition: 0.7s all linear;
+    height: 100%;
+}
+.authorOcordo li{ 
+    display: inline-block;
+}
+
+        /*------ MEDIO QUERY ------*/
+        
 @media screen and (min-width: 200px) and (max-width: 600px) {
     .video{
         display: none;
